--- a/index.html
+++ b/index.html
@@ -61,18 +61,32 @@
    
 
     
-       <div class= "grid-i grid-i3"><span class="heading-flex enquity">Equity Market</span>
-    <p class= "p-flex">Invest and Trade in companies you<br/> belive in directly</p></div> 
-   <div class= "grid-i grid-i4"><span class="heading-flex insurance ">Insurance</span><p class="p-flex p1"></p>Tax saving coupled with insurance <br/>for the risk averse</div> 
-   <div class= "grid-i grid-i5"><span class="heading-flex mutual">Mutual Funds</span><p class="p-flex p2">let the experts handle the work of <br/>making you rich</p></div> 
- <div class= "grid-i grid-i6"><span class="heading-flex">Fixed Deposits</span><p class="p-flex  p3">Your money is safe and sound and you get guaranteed returns</p></div> 
+       <!-- <div class= "grid-i grid-i3">
+           <div class="heading-flex enquity">Equity Market</div>
+    <div><p class= "p-flex">Invest and Trade in companies you<br/> belive in directly</p></div>
+</div> 
+   
+    <div class= "grid-i grid-i4">
+       <div class="heading-flex insurance ">Insurance</div>
+   <div><p class="p-flex p1"></p>Tax saving coupled with insurance <br/>for the risk averse</p></div>
+</div> 
+  
+   <div class= "grid-i grid-i5">
+       <div class="heading-flex mutual">Mutual Funds</div>
+       <div><p class="p-flex p2">let the experts handle the work of <br/>making you rich</p></div>
+    </div>
+
+ <div class= "grid-i grid-i6">
+     <div class="heading-flex fixed-depo">Fixed Deposits</div>
+     <div><p class="p-flex  p3">Your money is safe and sound and you get guaranteed returns</p></div>
+</div>  -->
 
  <!--  
  <div class="flex-c" style="display: flex; flex-wrap:wrap; flex-direction: row;"></div>
 </div> -->
     </div>
 
-    <div class="flex-container" style="position:absolute">
+    <!-- <div class="flex-container" style="position:absolute">
         <div class="container-item container item1"><div class="phone"></div>
         <div class="text1"></div>
     </div>
@@ -84,12 +98,54 @@
             & header builder.
             </div></div>
             <div class="view-more-b grid-i2 " style=" height: 3vh; line-height:3vh ;width:20vh; text-align:center;"><a class="a-view-more" href="#">VIEW MORE</a></div>
+        </div> -->
+
+
+            <div class="div-container">
+                <div class="phone-data ">
+                    <div class= "phone"></div>
+
+                    <div class= "phone-text">I want to <span class= "green-text">borrow</span> some money </div>
+                    <div class= "learn-link"> Learn More ></div>
+                </div>
+
+                <div class="handshake-data">
+                    <div class= "handshake"></div>
+
+                    <div class="handshake-text">I want to <span class= "green-text">invest</span> some money</div>
+                    <div class="learn-link"> Learn More ></div>
+                </div>
+                <div class= "m-w-f-y">
+                    <div class= "large-text">Its time to make your money<br/> work for you</div>
+                    <div class= "small-text">Over 30 high quality professionally designed pre-built<br/>
+                    websites concepts to choose from. Build your website<br/>
+                using a fully visual interface, using our revolutionary pare <br/>
+            & header builder.</div>
+            <div class="button-div"><button class= "green-button">VIEW MORE</button></div>
+                </div>
+
+            </div>
+
+
+            <div class= "div-container">
+                <div class="stark-corp">
+                <div class= "link-d-q"><a class= "double-q" href="#"> "</a>
+                </div>
+                <div class="big-text">A big part of financial freedom <br/>
+                is having your heart and mind<br/> free from worry about the<br/>
+            what-ifs of life.
+        </div>
+        <div class= "ts">Tony stark</div>
+        <div class="st">STARK INDUSTRIES</div>
+            </div>
+
+            <div class="boy-img"><img src="imag/standing-man.jpg" class= "boy-img"/></div>
+
         </div>
 
     </div>
     <!-- <img class="iphone" src="imag/phone.jpg"/> -->
 
-</div>
 
 </body>
 </html>
