--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
 
             <div class="div-container">
                 <div class="phone-data ">
-                    <div class= "phone"></div>
+                    <div class= "phone"><img class="phone" src="imag/phone.jpg"/></div>
 
                     <div class= "phone-text">I want to <span class= "green-text">borrow</span> some money </div>
                     <div class= "learn-link"> Learn More ></div>
                 </div>
 
                 <div class="handshake-data">
-                    <div class= "handshake"></div>
+                    <div class= "handshake"><img class="handshake" src="imag/handshak.jpg"/></div>
 
                     <div class="handshake-text">I want to <span class= "green-text">invest</span> some money</div>
                     <div class="learn-link"> Learn More ></div>
