--- a/index.html
+++ b/index.html
@@ -50,14 +50,46 @@
 
 
 
-<div class= "grid-s2">
+
+<div class="div-container2"> 
+    <div class=" div-item square">
+        <div class="div-i-1">Some of the investment services we offer</div>
+        <div class="div-i-2"> <p> over 30 quality professionally designed pre-built<br/> website concepts to choose from. Built your website<br/> using a fully visual interface, using our revolutionary page<br/> &  header builder.</p>
+        </div>
+        <div class="div-i-button"><a href="#">VIEW MORE</a></div>
+    </div>
+
+    
+    <div class= "div-item1 square">
+        <div class= "div-i1-1"><strong>Equity Markets</strong></div>
+        <div class= "div-i1-2"><p>Invest and Trade in companies you belive in directly.</p></div>
+    </div>
+
+    <div class= "div-item2 square">
+        <div class= "div-i2-1"><strong>Mutual Funds</strong></div>
+        <div class= "div-i2-2"><p>Let the experts handle the work of making you rich.</p></div>
+    </div>
+
+    <div class= "div-item3 square">
+        <div class= "div-i3-1"><strong>Insurance</strong></div>
+        <div class= "div-i3-2"><p>Tax services coupled with insurance for the risk averse.</p></div>
+    </div>
+
+    <div class= "div-item4 square">
+        <div class= "div-i4-1"><strong>Fixed Deposits</strong></div>
+        <div class= "div-i4-2"><p>Your money is safe and sound and you get guaranteed returns.</p></div>
+    </div>
+
+</div>
+
+<!-- <div class= "grid-s2">
    
     <div class= "grid-i grid-i2 grid-flex">
 
         <div class="super-bold grid-i2">Some of the investment<br/>services we offer</div>
         <div class="defination grid-i2"> <p> over 30 quality professionally designed pre-built<br/> website concepts to choose from. Built your website<br/> using a fully visual interface, using our revolutionary page<br/> &  header builder.</p></div>
         <div class="view-more-b grid-i2" style=" height: 3vh; line-height:3vh ;width:20vh; text-align:center;"><a class="a-view-more" href="#">VIEW MORE</a></div>
-    </div>
+    </div> -->
    
 
     
@@ -84,7 +116,7 @@
  <!--  
  <div class="flex-c" style="display: flex; flex-wrap:wrap; flex-direction: row;"></div>
 </div> -->
-    </div>
+    <!-- </div> -->
 
     <!-- <div class="flex-container" style="position:absolute">
         <div class="container-item container item1"><div class="phone"></div>
@@ -103,14 +135,14 @@
 
             <div class="div-container">
                 <div class="phone-data ">
-                    <div class= "phone"><img class="phone" src="imag/phone.jpg"/></div>
+                    <div class= "phone"><img class="phone1" src="imag/phone.jpg"/></div>
 
                     <div class= "phone-text">I want to <span class= "green-text">borrow</span> some money </div>
                     <div class= "learn-link"> Learn More ></div>
                 </div>
 
                 <div class="handshake-data">
-                    <div class= "handshake"><img class="handshake" src="imag/handshak.jpg"/></div>
+                    <div class= "handshake"><img class="handshake1" src="imag/handshak.jpg"/></div>
 
                     <div class="handshake-text">I want to <span class= "green-text">invest</span> some money</div>
                     <div class="learn-link"> Learn More ></div>
@@ -139,7 +171,9 @@
         <div class="st">STARK INDUSTRIES</div>
             </div>
 
-             <div class="boy-img"><!--<img src="imag/standing-man.png" class= "boy-img"/>--></div> 
+             <div class="boy-img"><div class= "boy-img1">
+             </div>
+            </div> 
 
         </div>
 
